Fixing alignment of login window

--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@
 }
 
 div#login-container {
-	position: absolute;
+	position: fixed;
     z-index: 99999;
     width: 100%;
     top: 100px;
